Ajustes no repositorio local

--- a/Brunosouza.html
+++ b/Brunosouza.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,6 +18,8 @@
           Estudo: Fib na areia de ciencias da computação <br/>
           Hobbis: Gosto de jogar e se divertir com a familia
         </p1>
+
+        Alterado no Redositório local
 
     </fieldset>
 
